--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image" href="favicon.ico">
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <title>My WebDev Project</title>
+    </head>
+    <body>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+            <table class="table">
+                <tr>
+                    <td><label for="principal">Amount</label></td>
+                    <td><input type="number"  id="principal"></td>
+                </tr>
+                <tr>
+                    <td><label for="rate">Interest Rate</label></td>
+                    <td><input type="range"  id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()">
+                    <span id="rate_val">10.25%</span></td>
+                </tr>
+                <tr>
+                    <td><label for="years">No. of Years</label></td>
+                    <!--<input type="number"  id="years"><br/><br/>-->
+                    <td><select id="years">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
+                    </td>
+                </tr>
+            </table><br/>
+            <button class="table" onclick="compute()">Compute Interest</button><br/><br/>
+            <!--Interest : <br><br/>-->
+            <div class="table">
+            <span id="result">
+
+            </span><br/><br/>
+            </div>
+            <footer>
+                &#169; This Calculator belongs to Tobi Taiwo
+            </footer>
+        </div>
+    </body>
 </html>
